<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundBlack"
    tools:context=".ui.bindtag.StepOneFragment">

    <TextView
        android:id="@+id/title"
        style="@style/textWhiteMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_step1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/btnBlog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="visible"
        android:id="@+id/btnFb"
        style="@style/textBlackMedium"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/common_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/btnIg"
        style="@style/textBlackMedium"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/common_ig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFb" />

    <TextView
        android:visibility="visible"
        android:id="@+id/btnYouTube"
        style="@style/textBlackMedium"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/common_yt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIg" />

    <TextView
        android:visibility="visible"
        android:id="@+id/btnBlog"
        style="@style/textBlackMedium"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/common_blog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYouTube" />

    <EditText
        android:id="@+id/etIg"
        style="@style/textBlackMedium"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="left|center_vertical"
        android:hint="@string/login_bind_account_hint"
        android:visibility="gone"
        android:inputType="text"
        android:lines="1"
        android:ellipsize="end"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBlog" />

    <TextView
        android:id="@+id/btnNext"
        style="@style/textWhiteMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/common_next"
        app:layout_constraintEnd_toEndOf="@+id/btnBlog"
        app:layout_constraintTop_toBottomOf="@id/etIg" />

    <TextView
        android:id="@+id/btnPre"
        style="@style/textWhiteMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/common_pre"
        app:layout_constraintLeft_toLeftOf="@+id/btnBlog"
        app:layout_constraintTop_toBottomOf="@id/etIg" />


</androidx.constraintlayout.widget.ConstraintLayout>