<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackgroundBlack"
    tools:context=".ui.bindtag.StepTwoFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        style="@style/textWhiteMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login_step2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/btnBlog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/etName"
        style="@style/textBlackMedium"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="left|center_vertical"
        android:hint="@string/login_bind_name"
        android:ellipsize="end"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/textBlackMedium"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="left|center_vertical"
        android:hint="@string/login_bind_phone"
        android:maxLength="10"
        android:inputType="phone"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/tvBirth"
        style="@style/textBlackMedium"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundGreyB"
        android:gravity="left|center_vertical"
        android:hint="@string/login_bind_birth"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <TextView
        android:id="@+id/btnNext"
        style="@style/textWhiteMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/common_next"
        app:layout_constraintEnd_toEndOf="@+id/tvBirth"
        app:layout_constraintTop_toBottomOf="@id/tvBirth" />

    <TextView
        android:id="@+id/btnPre"
        android:visibility="gone"
        style="@style/textWhiteMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/common_pre"
        app:layout_constraintLeft_toLeftOf="@+id/tvBirth"
        app:layout_constraintTop_toBottomOf="@id/tvBirth" />

</androidx.constraintlayout.widget.ConstraintLayout>